# IncomFlowSolver

./: CMakeLists.txt  README.md
.github/workflows/: compile_and_test.yml
aux/: .gitignore  IncomFlowConfig.h.in
scripts/: compile_incomflow.sh
src/solver/: Boundary.h  BoundaryData.h  BoundaryDef.h  BoundaryList.h  CMakeLists.txt  DualGrid.h  PrimaryGrid.h  PrimaryGridReader.h  definitions.h  solver_utils.h
src/tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.h  tests_DualGrid.cpp  tests_PrimaryGrid.cpp
src/utils/: Matrix.h
